Maverick Synergy 3.0.3-SNAPSHOT

Features
    o Refactor of callback client; separated CallbackContextFactory and added SshConnection parameter to event methods.
    o Added before/after methods to Utils.
    
Bug Fixes
    o Missing server-level collection of GlobalRequestHandlers.
    
=================
=  HISTORY      =
=================

Maverick Synergy 3.0.3-FINAL - Jul 21, 2021

Bug Fixes
    o Configure default connection timeout value of 600 seconds and ensure zero value is treated as no timeout.
    o VirtualMountFile and VirtualMappedFile now cache children until refreshed.
    
-----------------

Maverick Synergy 3.0.2-FINAL - Jul 20, 2021

Bug Fixes
    o File listing in VirtualFileFactory returns duplicate path entries for parents of mount entries.
    o VirtualMountFile no longer attempts to resolve its target file during construction and defers this until some operation is attempted on the file object.
    o Change junixsocket dependency of maverick-sshagent to version 2.3.4 to remove its transitive dependency of log4j 1.2
    
-----------------

Maverick Synergy 3.0.1-FINAL - Jul 9, 2021

Bug Fixes
    o Idle connection timeout issues after authentication.
    
-----------------

Maverick Synergy 3.0.0-FINAL - Jul 7, 2021

Features
  o Added isRunning method to AbstractSshServer.

Bug Fixes
    o VirtualMountFile fails when it's path within it's parent mount does not exist. 
    o Idle connection timeout issues after authentication.
    
------------------

Maverick Synergy 3.0.0-RC8 - Jun 21, 2021

Features
  o Log file transfers at INFO level with performance metrics.
    
Bug Fixes
  o When changing user/group via SftpFileAttributes create new attribute set with just the field being changed to avoid passing attributes that the server does not want to change.
  o Missing enableFile methods from RootLoggerContext interface.